--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -39,11 +39,9 @@
       <div id="noteIndicator" class="d-hide"></div>
     </div>
 
-    <div class="d-inline-block position-relative hoverbg{{if not $authed}} d-hide{{end}}" id="profileIcon">
-      <span class="ico-profile p-2 fs20"></span>
+    <div class="d-inline-block position-relative{{if not $authed}} d-hide{{end}}" id="profileMenuEntry">
+      <span class="ico-hamburger fs20 hoverbright" id="profileIcon"></span>
     </div>
-
-    <a href="/settings" class="ico-settings hoverbg fs24"></a>
 
   </div>
   <div id="loader" class="fill-abs flex-center d-hide">
@@ -78,10 +76,24 @@
   </div>
 
   <div id="profileBox" class="d-hide">
-    <div class="icon fs20 ico-profile p-1" id="innerProfileIcon"></div>
-    <span class="demi hoverbg pointer" id="profileSignout">[[[Sign Out]]]</span>
-    <a href="/orders" class="demi hoverbg plainlink pt-2">[[[Order History]]]</a>
+    <div class="icon fs20 ico-hamburger p-1" id="innerProfileIcon"></div>
+    <div class="demi hoverbright pointer d-flex align-items-center py-1" id="profileSignout">
+      <span class="ico-profile fs16 me-2"></span>
+      [[[Sign Out]]]
+    </div>
     <span class="errcolor" id="logoutErr"></span>
+    <a href="/orders" class="demi hoverbright plainlink d-flex align-items-center py-1">
+      <span class="ico-settings fs16 me-2"></span>
+      [[[Order History]]]
+    </a>
+    <a href="/mm" class="demi hoverbright plainlink d-flex align-items-center py-1">
+      <span class="ico-barchart fs16 me-2"></span>
+      [[[Market Making]]]
+    </a>
+    <a href="/settings" class="demi hoverbright plainlink d-flex align-items-center py-1">
+      <span class="ico-settings fs16 me-2"></span>
+      [[[Settings]]]
+    </a>
   </div>
 
 </header>
