--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -343,3 +343,57 @@ button.form-button {
   padding: 5px 10px;
   border: 1px solid $light_border_color;
 }
+
+.order-opt {
+  border: 1px solid #424242;
+  border-radius: 3px;
+  padding: 4px;
+  margin-top: 8px;
+  opacity: 0.7;
+
+  div.opt-check {
+    width: 15px;
+    height: 15px;
+    border-radius: 7.5px;
+    border: 2px solid #424242;
+    margin-top: 5px;
+    cursor: pointer;
+  }
+
+  .xy-range-input {
+    width: 35px;
+    font-size: 14px;
+    height: 16px;
+  }
+
+  .slider {
+    margin: 10px 10px 5px;
+    height: 2px;
+    background-color: grey;
+    position: relative;
+
+    .slider-handle {
+      position: absolute;
+      height: 20px;
+      width: 14px;
+      top: -9px;
+      border-radius: 7px;
+      background-color: #2cce9c;
+      border: 2px solid #424242;
+      cursor: pointer;
+    }
+  }
+
+  &:not(.selected) {
+    cursor: pointer;
+  }
+
+  &.selected {
+    opacity: 1;
+    background-color: #e8ebed;
+
+    div.opt-check {
+      background-color: #2cce9c;
+    }
+  }
+}
