--- a/client/webserver/site/src/css/forms_dark.scss
+++ b/client/webserver/site/src/css/forms_dark.scss
@@ -3,6 +3,10 @@ body.dark {
     color: #a1a1a1;
   }
 
+  .order-opt.selected {
+    background-color: #222e38;
+  }
+
   #regAssetForm {
     div.reg-asset {
       .fader {
