--- a/client/webserver/site/src/css/main_dark.scss
+++ b/client/webserver/site/src/css/main_dark.scss
@@ -26,7 +26,7 @@ body.dark {
     color: #a8a8a8;
   }
 
-  div.mainlinks .hoverbg:hover {
+  #header .hoverbright:hover {
     color: #c5c5c5;
   }
 
