client/asset/eth: add RPC client
client/asset/eth:
Adds an RPC client that can maintain one or more websocket (preferred), http, or
ipc connections. Implements ethFetcher as well as bind.ContractBackend. Websocket
connections have a block header feed, so need to make fewer requests. For http
connections, the block header requests are metered to one per 10 seconds.
If no nonces are involved, the provider to use for a request is picked randomly,
but closely grouped requests involving nonces will attempt to use the same provider.

client/asset: Add Repeatable bool field to ConfigOption to allow multiple
inputs.

ui: Work with new repeatable input type.

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -120,6 +120,9 @@ button:focus {
   & > div {
     min-height: 55px;
     margin-top: 10px;
+  }
+
+  & > div:not(.repeatable) {
     width: 47%;
   }
 }
