--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -21,6 +21,13 @@
       <input type="date" class="form-control select">
     </div>
   </div>
+  <div data-tmpl="repeatableInput" class="w-100">
+    <label class="form-label ps-1 mb-1 small"> <span class="ico-info"></span></label>
+    <div class="d-flex align-items-stretch">      
+      <input type="text" class="form-control select flex-grow-1">
+      <div class="ico-plus fs14 p-1 ms-2 pointer hoverbg" data-tmpl="add"></div>
+    </div>
+  </div>
   <div data-tmpl="showOther" class="d-hide mb-1 pointer d-flex align-items-center justify-content-start mt-3">
     <span data-tmpl="showIcon" class="ico-plus fs8 ps-1"></span>
     <span data-tmpl="hideIcon" class="ico-minus fs8 ps-1"></span>
