review changes and improvements
- Add an adddress validation method and endpoint.
- Improve send form.
- Display max send with fees on send form.
- Imrove fee estimation and modify fee esimation endpoint.

--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -257,3 +257,8 @@
   color: #d11414;
   font-size: bold;
 }
+
+#sendAddr.invalid {
+  border-color: #ee1a1a;
+  box-shadow: 0 0 2px 2px #ee1a1a;
+}
