--- a/client/webserver/site/src/localized_html/pt-BR/wallets.tmpl
+++ b/client/webserver/site/src/localized_html/pt-BR/wallets.tmpl
@@ -226,7 +226,10 @@
       </div>
       <div class="mt-3">
         <label for="sendAddr" class="form-label ps-1 mb-1">Endereço</label>
-        <input type="text" class="form-control select" id="sendAddr">
+        <div class="d-flex">
+         <input type="text" class="form-control col-1 select" id="sendAddr">
+         <span id="validAddr" class="ico-check mx-2 pt-2 d-hide"></span>
+        </div>
       </div>
       <div class="d-flex align-items-stretch">
         <div class="mt-2 col-10 p-0">
@@ -234,8 +237,7 @@
           <input type="text" class="form-control select" id="sendAmt">
         </div>
         <div class="col-14 px-0 py-1 flex-center flex-column fs15 justify-content-between">
-          <div class="d-inline pt-3"><span class="pointer" id="sendAvail"></span> disponível</div>
-          <!-- <div class="d-inline">tx fees: <span id="sendFee"></span> <span id="sendUnit"></span>/byte</div> -->
+          <div class="d-inline pt-3">Balanço: <span class="pointer" id="walletBal"></span></div>
         </div>
       </div>
       <span class="mt-2 d-hide">~<span id="sendValue" class="mx-1"></span>USD</span>
@@ -243,8 +245,25 @@
           <input class="form-check-input" type="checkbox" id="subtractCheckBox">
           <label for="subtractCheckBox" class="form-label ps-1">Subtract fees from amount sent.</label>
       </div>
-      <div id="senderOnlyHelpText" class="pt-2">
-      <p>The network fees will not be subtracted from the sent amount. Ensure you have enough in your wallet to cover fees.</p>
+      <div id="maxSendDisplay" class="mt-3">
+        <hr class="dashed mt-2">
+       <div class="d-flex justify-content-between">
+        <span data-tooltip="This is the estimated amount that will be received if you withdraw your current balance with 'Subtract fees from amount sent' checked.
+         If there is no subtract fee checkbox, this is the maximum estimated amount you can send.">
+        Max Estimated Send:
+        <span class="ico-info"></span>
+        </span>
+        <span id="maxSend"></span>
+       </div>
+       <span class="d-flex d-hide justify-content-end grey fs14">
+        ~<span id="maxSendFiat" class="mx-1"></span>USD
+       </span>
+       <div class="d-flex align-items-center justify-content-between">Max Estimated Send Fee: 
+        <span id="maxSendFee"></span>
+       </div>
+       <span class="d-flex d-hide justify-content-end grey fs14">
+        ~<span id="maxSendFeeFiat" class="mx-1"></span>USD
+       </span>
       </div>
       <hr class="dashed mt-2">
       <div class="d-flex justify-content-end mt-2">
@@ -255,11 +274,11 @@
 
     {{- /* Verify Send */ -}}
     <form class="pb-3 d-hide" id="vSendForm">
+      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="py-1 text-center position-relative header fs22 sans-light">
       Confirm
        <img id="vSendLogo" class="micro-icon mx-1">
       Transfer
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       </div>
       <div class="grey fs18 text-center m-2">Sending</div>
       <div class="text-center">
@@ -270,7 +289,7 @@
       <div class="text-center">para</div>
       <div id="vSendAddr" class="text-center font-weight-bold"></div>
       <hr class="dashed mt-2">
-      <div class="d-flex align-items-center justify-content-between">Estimated Transaction Fee: 
+      <div class="d-flex align-items-center justify-content-between">Estimated Fee: 
        <span id="vSendFee"></span>
       </div>
       <span class="d-flex d-hide justify-content-end grey fs14">
@@ -289,6 +308,7 @@
       <span class="d-flex d-hide justify-content-end grey fs14">
        ~<span id="balanceAfterSendFiat" class="mx-1"></span>USD
       </span>
+      <div class="fs14  errcolor mt-3" id="vSendAddrMsg">Note: You have to provide a valid address before proceeding.</div>
       <hr class="dashed my-4">
        <div class="fs16 px-4 text-center">Authorize the transfer with your app password.</div>
         <div class="input-group mt-2">
@@ -301,15 +321,10 @@
         </div>
         <div class="col-12 p-0 text-end">
           <button id="vSend" type="button"
-            class="w-75 mt-1 justify-content-center fs15 bg2 selected">Confirm</button>
+           class="w-75 mt-1 justify-content-center fs15 bg2 selected">Confirm</button>
         </div>
       </div>
       <div class="fs15 pt-3 text-center errcolor text-break" id="vSendErr"></div>
-    </form>
-
-    {{- /* UNLOCK WALLET */ -}}
-    <form class="position-relative d-hide" id="unlockWalletForm" autocomplete="off">
-      {{template "unlockWalletForm"}}
     </form>
 
     {{- /* DEPOSIT ADDRESS */ -}}
