client/server/eth: Babysit ETH Redemptions
- client/asset: Add a new function to the wallet interface called
  `ConfirmRedemption`. This function will return how many
   confirmations the redemption has, how many are required for
   it to be considered fully confirmed, and the CoinID of the
   redemption. If it is determined that the redemption will not
   be mined, the redemption is resubmitted, and the new CoinID
   is returned.

- client/core:
  - Add a new order status called MatchConfirmed. This status is set
    when it has been confirmed that the user's redemption has been
    mined.
  - A new step is added to `tick` which checks the status of the user's
    redemption.

- client/eth: The `ConfirmRedemption` function is implemented. Redemption
  transactions are resubmitted if the nonce in the original transaction
  has been used by another transaction, or if the gas price in the
  transaction is lower than the base fee. Since there is a chance that
  geth will no longer hold onto a transaction if it has no chance of being
  mined, and also because we need to know which transaction replaced which,
  a key value database is added. It stores all redemption transactions,
  the block in which they were submitted, and optionally the hash of a
  transaction which replaced it.

- server/eth: The coiner is updated to accept a redemption if the swap
  has been redeemed, even if the transaction that the client claimed
  it used to do the redemption cannot be found.

--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -177,7 +177,12 @@
           </div>
           {{$coin = $match.Redeem}}
           <div class="px-3 pb-3{{if not $coin}} d-hide{{end}}" data-tmpl="redeem">
-            <span class="match-data-label">[[[Redemption]]] ({{$ord.ToSymbol}}, [[[you]]])</span><br>
+            <div class="d-flex align-items-center justify-content-between">
+              <span class="match-data-label">[[[Redemption]]] ({{$ord.ToSymbol}}, [[[you]]])</span>
+              <span class="match-data-label{{if not $match.InConfirmingRedeem}} d-hide{{end}}" data-tmpl="redeemMsg">
+                {{$match.ConfirmRedeemString}}
+              </span>
+            </div>
             <a target="_blank" class="mono plainlink" data-explorer-id="{{$ord.ToID}}"
               data-explorer-coin="{{if $coin}}{{$coin.StringID}}{{end}}" data-tmpl="redeemCoin">{{if $coin}}{{$coin.StringID}}{{end}}</a>
           </div>
