client: add match summary info from server and add recent matches table into site

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -703,6 +703,41 @@ div.numorders {
   }
 }
 
+#recentMatchesTable {
+  th {
+    align-items: center;
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    .ico-arrowdown {
+      display: inline-block;
+      visibility: hidden;
+      vertical-align: middle;
+      font-size: 10px;
+      margin-left: 5px;
+    }
+
+    &.sorted-dsc {
+      .ico-arrowdown {
+        visibility: visible;
+      }
+    }
+
+    &.sorted-asc {
+      .ico-arrowdown {
+        visibility: visible;
+        transform: rotate(180deg);
+      }
+    }
+  }
+
+  tr {
+    cursor: pointer;
+  }
+}
+
 #vDetailPane {
   max-width: 425px;
 
