Implement wallet disable feature

--- a/client/webserver/site/src/css/main_dark.scss
+++ b/client/webserver/site/src/css/main_dark.scss
@@ -71,6 +71,10 @@ body.dark {
     &.danger {
       border: 1px solid #c91e1e;
     }
+
+    &.green {
+      border: 1px solid #0b6f1a;
+    }
   }
 
   select,
