--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -248,8 +248,7 @@
       <div id="maxSendDisplay" class="mt-3">
         <hr class="dashed mt-2">
        <div class="d-flex justify-content-between">
-        <span data-tooltip="This is the estimated amount that will be received if you withdraw your current balance with 'Subtract fees from amount sent' checked.
-         If there is no subtract fee checkbox, this is the maximum estimated amount you can send.">
+        <span data-tooltip="[[[max_estimated_send_tooltip]]]">
         [[[max_estimated_send]]]:
         <span class="ico-info"></span>
         </span>
