--- a/client/webserver/site/src/localized_html/pl-PL/wallets.tmpl
+++ b/client/webserver/site/src/localized_html/pl-PL/wallets.tmpl
@@ -248,8 +248,7 @@
       <div id="maxSendDisplay" class="mt-3">
         <hr class="dashed mt-2">
        <div class="d-flex justify-content-between">
-        <span data-tooltip="This is the estimated amount that will be received if you withdraw your current balance with 'Subtract fees from amount sent' checked.
-         If there is no subtract fee checkbox, this is the maximum estimated amount you can send.">
+        <span data-tooltip="This is the estimated amount that will be received if you withdraw your current balance with 'Subtract fees from amount sent' checked. If there is no subtract fee checkbox, this is the maximum estimated amount you can send.">
         Max Estimated Send:
         <span class="ico-info"></span>
         </span>
@@ -308,7 +307,7 @@
       <span class="d-flex d-hide justify-content-end grey fs14">
        ~<span id="balanceAfterSendFiat" class="mx-1"></span>USD
       </span>
-      <div class="fs14  errcolor mt-3" id="vSendAddrMsg">Note: You have to provide a valid address before proceeding.</div>
+      <div class="fs14  errcolor mt-3" id="vSendAddrMsg">Note: Provide a valid address.</div>
       <hr class="dashed my-4">
        <div class="fs16 px-4 text-center">Authorize the transfer with your app password.</div>
         <div class="input-group mt-2">
