client: fix missing data-tmpl

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -141,13 +141,13 @@
                       </span>
                     </td>
                     <td class="d-none d-md-table-cell d-lg-none d-xxl-table-cell"><div data-tmpl="host" class="short-host"></div></td>
-                    <td>
+                    <td data-tmpl="priceBox">
                       <span data-tmpl="price"></span>
                       <span class="fs13 grey">
                         <sup data-tmpl="priceQuoteUnit" class></sup>/<sub data-tmpl="priceBaseUnit"></sub>
                       </span>
                     </td>
-                    <td data-tmpl="volume">
+                    <td data-tmpl="volumeBox">
                       <span data-tmpl="volume"></span>
                       <span data-tmpl="volumeUnit" class="fs15 grey"></span>
                     </td>
