--- a/client/webserver/site/src/localized_html/pt-BR/wallets.tmpl
+++ b/client/webserver/site/src/localized_html/pt-BR/wallets.tmpl
@@ -75,6 +75,10 @@
                       <td class="grey">Status</td>
                       <td><span class="ico-sleeping fs14 me-2"></span>Off</td>
                     </tr>
+                    <tr id="statusDisabled">
+                      <td class="grey">Status</td>
+                      <td><span class="ico-cross errcolor fs14 me-2"></span>Disabled</td>
+                    </tr>
                     <tr id="unlockBttnBox">
                       <td colspan="2" class="pb-2">
                         <button id="unlockBttn" class="fs14 p-1 hoverbg">Destrancar</button>
@@ -349,23 +353,7 @@
 
     {{- /* TOGGLE WALLET STATUS AUTHORIZATION */ -}}
     <form class="d-hide" id="toggleWalletStatusConfirm">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
-      <div class="px-2 py-1 text-center position-relative fs22 sans-light">
-        Change Wallet Status
-      </div>
-      <div class="fs15 text-left mt-2">
-       <span id="toggleDisableWallet" class="hide">Note: This wallet will not be connected to when you start the DEX client software and cannot be used until it is enabled. Ensure you do not have active trades.</span>
-       <span id="toggleEnableWallet" class="hide">This wallet will resume operation and might take some time to sync.</span>
-      </div>
-      <input id="toggleWalletStatus" class="form-check-input d-hide" type="checkbox">
-      <div class="text-left mt-2">
-        <label for="toggleWalletStatusPW" class="form-label pl-1 mb-1">Password</label>
-        <input type="password" class="form-control select" id="toggleWalletStatusPW" autocomplete="current-password">
-      </div>
-      <div class="d-flex justify-content-end mt-4">
-        <button id="toggleWalletStatusSubmit" type="button" class="justify-content-center fs15 bg2 selected">Enviar</button>
-      </div>
-      <div class="fs15 pt-3 text-center d-hide errcolor" id="toggleWalletStatusErr"></div>
+      {{template "toggleWalletStatusConfirm"}}
     </form>
 
     {{- /* CONFIRM FORCE FORM */ -}}
