ui: restyle markets page

--- a/client/webserver/site/src/css/application.scss
+++ b/client/webserver/site/src/css/application.scss
@@ -2,17 +2,14 @@
 $grid-columns: 24;
 $font-color-dark: #dfe2e1;
 $font-color-light: #333;
-$buycolor_dark: #05a35a;
-$sellcolor_dark: #ae3333;
+$buycolor_dark: #29bb77;
+$sellcolor_dark: #e95e5e;
 $buycolor_light: #207a46;
 $sellcolor_light: #99302b;
-$light_bg_1: #eaeaea;
-$light_bg_2: #d5d5d5;
-$dark_bg_1: #111;
-$dark_bg_2: #1e1e1e;
-$dark_bg_3: #292929;
-$dark_body_bg: #13202b;
-$light_body_bg: #e0e0e0;
+$light_body_bg: white;
+$dark_body_bg: #091a28;
+$light_border_color: #ddd;
+$dark_border_color: #383f4b;
 $sans: "source-sans", sans-serif;
 $demi-sans: "demi-sans", sans-serif;
 $mono: "mono", monospace;
