--- a/client/webserver/site/src/css/main_dark.scss
+++ b/client/webserver/site/src/css/main_dark.scss
@@ -3,12 +3,22 @@ body.dark {
   color: $font-color-dark;
 
   header.maintop {
-    background-color: black;
-    border-bottom-style: none;
+    // background-color: black;
+    border-bottom-style: solid;
+    border-color: $dark_border_color;
+    border-width: 1px;
+  }
+
+  a.logo-icon {
+    background-image: url("/img/softened-icon-dark.png");
   }
 
   .offwhite {
     color: #a1a1a1;
+  }
+
+  .grey {
+    color: #666;
   }
 
   div.mainlinks > div,
@@ -16,7 +26,7 @@ body.dark {
     color: #a8a8a8;
   }
 
-  div.mainlinks .hoverbright:hover {
+  div.mainlinks .hoverbg:hover {
     color: #c5c5c5;
   }
 
@@ -28,24 +38,20 @@ body.dark {
     border-color: #333;
   }
 
-  .bg0 {
-    background-color: black;
+  .brdrleft {
+    border-left: 1px solid dark_border_color;
   }
 
-  .border1 {
-    border: 1px solid #333;
+  .brdrright {
+    border-right: 1px solid dark_border_color;
   }
 
-  .bg1 {
-    background-color: $dark_bg_1;
+  .brdrtop {
+    border-top: 1px solid dark_border_color;
   }
 
-  .bg2 {
-    background-color: $dark_bg_2;
-  }
-
-  .bg3 {
-    background-color: $dark_bg_3;
+  .brdrbottom {
+    border-bottom: 1px solid dark_border_color;
   }
 
   .subtlelink,
@@ -99,22 +105,13 @@ body.dark {
     opacity: 1;
   }
 
-  form.card button,
-  form.card label {
-    text-shadow: 0 0 4px black;
-  }
-
-  form.card button:hover {
-    color: #dde9ff;
-  }
-
   div.popup-notes > span {
     background-color: white;
     color: $font-color-light;
   }
 
   #forms {
-    background-color: #13202bf3;
+    background-color: $dark_body_bg;
   }
 
   .buycolor {
@@ -125,13 +122,9 @@ body.dark {
     color: $sellcolor_dark;
   }
 
-  div.border1 {
-    border: 1px solid #333;
-  }
-
   #noteBox,
   #profileBox {
-    background-color: $dark_bg_1;
+    background-color: $dark_body_bg;
   }
 
   #tooltip {
