--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -111,6 +111,25 @@
 <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="unlockErr"></div>
 {{end}}
 
+{{define "depositAddress"}}
+<div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+<div class="px-2 py-1 mb-2 text-center position-relative fs22 sans-light">
+  [[[Deposit]]]
+  <img id="depositLogo" class="micro-icon mx-1">
+  <span id="depositName"></span>
+</div>
+<img class="mb-3" id="qrcode" />
+<div class="mono bg0 p-2 fs15">
+  <span id="depositAddress"></span>
+  <span id="copyAddressBtn" class="ico-copy mt-2 ml-2 fs18"></span>
+  <span id="copyAlert" class="d-hide">[[[copied]]]</span>
+</div>
+<div class="my-3">
+  <button id="newDepAddrBttn" type="button" class=" px-2 justify-content-center fs15 bg2 selected">[[[New Deposit Address]]]</button>
+</div>
+<div class="fs15 pt-3 text-center d-hide errcolor text-break" id="depositErr"></div>
+{{end}}
+
 {{define "dexAddrForm"}}
 <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
 <div data-tmpl="addDexHdr" class="flex-center fs24 sans-light"><span class="ico-plus fs12 me-2"></span> [[[Add a DEX]]]</div>
