--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -4,7 +4,7 @@
 <div id="main" data-handler="wallets" class="walletspage flex-grow-1 position-relative">
   <div class="fill-abs d-flex align-items-stretch">
     {{- /* ASSET SELECT */ -}}
-    <div class="d-flex flex-column align-items-stretch stylish-overflow bg1 invisible" id="assetSelect">
+    <div class="d-flex flex-column align-items-stretch stylish-overflow invisible" id="assetSelect">
       <div id="iconSelectTmpl" class="icon-select d-flex align-items-stretch">
         <img data-tmpl="img">
         <div class="d-none d-md-flex flex-column justify-content-around ps-2">
@@ -122,8 +122,8 @@
         </div>{{/* END WALLET DETAILS */}}
 
         {{- /* MARKETS OVERVIEW */ -}}
-        <div class="col-24 col-lg-12 col-xxl-8 d-flex stylish-overflow-lg bg1-lg border-top-lt-lg invisible" id="marketsOverviewBox">
-          <div class="m-auto flex-center flex-column w-100 py-3">
+        <div class="col-24 col-lg-12 col-xxl-8 d-flex stylish-overflow-lg invisible" id="marketsOverviewBox">
+          <div class="m-auto flex-center flex-column w-100 p-3">
             <div class="d-flex align-items-start flex-column mw-90p">
               <span class="fs28 sans-light mb-2">[[[asset_name Markets]]]</span>
               <table id="availableMarketsTable" class="w-100">
@@ -163,8 +163,8 @@
         </div>{{/* END MARKETS OVERVIEW */}}
 
         {{- /* RECENT ORDERS */ -}}
-        <div class="col-24 col-xxl-8 d-flex stylish-overflow-lg border-top-lt-xxl invisible" id="orderActivityBox">
-          <div class="my-auto flex-center w-100 py-3" id="orderActivity">
+        <div class="col-24 col-xxl-8 d-flex stylish-overflow-lg invisible" id="orderActivityBox">
+          <div class="my-auto flex-center w-100 p-3" id="orderActivity">
             <div class="d-flex align-items-start flex-column mw-90p">
               <span class="fs28 sans-light mb-2">[[[Recent asset_name Activity]]]</span>
               <table id="ordersTable" class="my-auto" class="w-100">
@@ -332,22 +332,7 @@
 
     {{- /* DEPOSIT ADDRESS */ -}}
     <form class="position-relative flex-center flex-column fs20 d-hide" id="deposit">
-      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
-      <div class="px-2 py-1 mb-2 text-center position-relative fs22 sans-light">
-        [[[Deposit]]]
-        <img id="depositLogo" class="micro-icon mx-1">
-        <span id="depositName"></span>
-      </div>
-      <img class="mb-3" id="qrcode" />
-      <div class="mono bg0 p-2 fs15">
-        <span id="depositAddress"></span>
-        <span id="copyAddressBtn" class="ico-copy mt-2 ml-2 fs18"></span>
-        <span id="copyAlert" class="d-hide">[[[copied]]]</span>
-      </div>
-      <div class="my-3">
-        <button id="newDepAddrBttn" type="button" class=" px-2 justify-content-center fs15 bg2 selected">[[[New Deposit Address]]]</button>
-      </div>
-      <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="depositErr"></div>
+      {{template "depositAddress"}}
     </form>
 
     {{- /* UNLOCK WALLET */ -}}
