core: Fix swap/redemption fee info
Previously, swap fees were displayed instead of redemption fees.
Also, for tokens, the token asset was displayed as the fee asset
instead of the parent. Both of these issues are fixed.

--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -76,8 +76,8 @@
       <div class="order-datum">
         <div>[[[Fees]]] <span class="ico-info fs12" data-tooltip="[[[order_fees_tooltip]]]"></span></div>
         <div>
-          {{$ord.SwapFeesString}} {{template "microIcon" $ord.FromSymbol}},
-          {{$ord.RedemptionFeesString}} {{template "microIcon" $ord.ToSymbol}}
+          {{$ord.SwapFeesString}} {{template "microIcon" $ord.FromFeeSymbol}},
+          {{$ord.RedemptionFeesString}} {{template "microIcon" $ord.ToFeeSymbol}}
         </div>
       </div>
       <div class="order-datum">
