--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -226,7 +226,10 @@
       </div>
       <div class="mt-3">
         <label for="sendAddr" class="form-label ps-1 mb-1">[[[Address]]]</label>
-        <input type="text" class="form-control select" id="sendAddr">
+        <div class="d-flex">
+         <input type="text" class="form-control col-1 select" id="sendAddr">
+         <span id="validAddr" class="ico-check mx-2 pt-2 d-hide"></span>
+        </div>
       </div>
       <div class="d-flex align-items-stretch">
         <div class="mt-2 col-10 p-0">
@@ -234,8 +237,7 @@
           <input type="text" class="form-control select" id="sendAmt">
         </div>
         <div class="col-14 px-0 py-1 flex-center flex-column fs15 justify-content-between">
-          <div class="d-inline pt-3"><span class="pointer" id="sendAvail"></span> [[[available]]]</div>
-          <!-- <div class="d-inline">tx fees: <span id="sendFee"></span> <span id="sendUnit"></span>/byte</div> -->
+          <div class="d-inline pt-3">[[[Balance]]]: <span class="pointer" id="walletBal"></span></div>
         </div>
       </div>
       <span class="mt-2 d-hide">~<span id="sendValue" class="mx-1"></span>USD</span>
@@ -243,22 +245,85 @@
           <input class="form-check-input" type="checkbox" id="subtractCheckBox">
           <label for="subtractCheckBox" class="form-label ps-1">Subtract fees from amount sent.</label>
       </div>
-      <div id="senderOnlyHelpText" class="pt-2">
-      <p>The network fees will not be subtracted from the sent amount. Ensure you have enough in your wallet to cover fees.</p>
+      <div id="maxSendDisplay" class="mt-3">
+        <hr class="dashed mt-2">
+       <div class="d-flex justify-content-between">
+        <span data-tooltip="[[[max_estimated_send_tooltip]]]">
+        [[[max_estimated_send]]]:
+        <span class="ico-info"></span>
+        </span>
+        <span id="maxSend"></span>
+       </div>
+       <span class="d-flex d-hide justify-content-end grey fs14">
+        ~<span id="maxSendFiat" class="mx-1"></span>USD
+       </span>
+       <div class="d-flex align-items-center justify-content-between">[[[max_estimated_send_fee]]]: 
+        <span id="maxSendFee"></span>
+       </div>
+       <span class="d-flex d-hide justify-content-end grey fs14">
+        ~<span id="maxSendFeeFiat" class="mx-1"></span>USD
+       </span>
       </div>
+      <hr class="dashed mt-2">
+      <div class="d-flex justify-content-end mt-2">
+          <button id="submitSendForm" type="button" class="col-8 mt-1 text-center fs15 bg2 selected">[[[Send]]]</button>
+      </div>
+      <div class="fs15 pt-3 text-center errcolor text-break" id="sendErr"></div>
+    </form>
+
+    {{- /* Verify Send */ -}}
+    <form class="pb-3 d-hide" id="vSendForm">
+      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="py-1 text-center position-relative header fs22 sans-light">
+      [[[confirm]]]
+       <img id="vSendLogo" class="micro-icon mx-1">
+      [[[transfer]]]
+      </div>
+      <div class="grey fs18 text-center m-2">[[[sending]]]</div>
+      <div class="text-center">
+        <span class="d-hide" id="approxSign">&cong;</span>
+        <span class="fs22 font-weight-bold" id="vSendDestinationAmt"></span>
+        <span id="vSendSymbol"></span>
+      </div>
+      <div class="text-center">[[[to]]]</div>
+      <div id="vSendAddr" class="text-center font-weight-bold"></div>
+      <hr class="dashed mt-2">
+      <div class="d-flex align-items-center justify-content-between">[[[estimated_fee]]]: 
+       <span id="vSendFee"></span>
+      </div>
+      <span class="d-flex d-hide justify-content-end grey fs14">
+       ~<span id="vSendFeeFiat" class="mx-1"></span>USD
+      </span>
+      <hr class="dashed mt-2">
+      <div class="d-flex align-items-center justify-content-between">[[[estimated_total_spend]]]: 
+       <span id="vTotalSend"></span>
+      </div>
+      <span class="d-flex d-hide justify-content-end grey fs14">
+       ~<span id="vTotalSendFiat" class="mx-1"></span>USD
+      </span>
+      <div class="d-flex align-items-center justify-content-between">[[[estimated_balance]]]: 
+       <span id="balanceAfterSend"></span>
+      </div>
+      <span class="d-flex d-hide justify-content-end grey fs14">
+       ~<span id="balanceAfterSendFiat" class="mx-1"></span>USD
+      </span>
+      <div class="fs14  errcolor mt-3" id="vSendAddrMsg">[[[invalid_address]]]</div>
       <hr class="dashed my-4">
-      <div class="fs16 px-4 text-center">[[[Authorize the transfer with your app password.]]]</div>
-      <div class="d-flex mt-3">
+       <div class="fs16 px-4 text-center">[[[Authorize the transfer with your app password.]]]</div>
+        <div class="input-group mt-2">
+          <label for="vSendPw" class="form-label m-2">[[[Password]]]: </label>
+          <input type="password" class="form-control select" id="vSendPw" autocomplete="off">
+        </div>
+      <div class="d-flex justify-content-between align-items-stretch flex-wrap mt-3">
         <div class="col-12 p-0">
-          <label for="sendPW" class="form-label ps-1 mb-1">[[[Password]]]</label>
-          <input type="password" class="form-control select" id="sendPW" autocomplete="off">
+          <button id="vCancelSend" type="button" class="w-75 mt-1 justify-content-center fs15 bg2 ">[[[cancel]]]</button>
         </div>
         <div class="col-12 p-0 text-end">
-          <div>&nbsp;</div>
-          <button id="submitSendForm" type="button" class="w-75 mt-1 justify-content-center fs15 bg2 selected">[[[Send]]]</button>
+          <button id="vSend" type="button"
+           class="w-75 mt-1 justify-content-center fs15 bg2 selected">[[[confirm]]]</button>
         </div>
       </div>
-      <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="sendErr"></div>
+      <div class="fs15 pt-3 text-center errcolor text-break" id="vSendErr"></div>
     </form>
 
     {{- /* DEPOSIT ADDRESS */ -}}
