chapp's review - couple errors fix

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -431,7 +431,7 @@
             <table id="recentMatchesTable" class="ordertable">
               <thead>
                 <tr>
-                  <th data-ordercol="stamp">[[[Age]]] <span class="ico-arrowdown"></span></th>
+                  <th data-ordercol="stamp">[[[Time]]] <span class="ico-arrowdown"></span></th>
                   <th data-ordercol="rate">[[[Rate]]] <span class="ico-arrowdown"></span></th>
                   <th data-ordercol="qty">[[[Quantity]]] <span class="ico-arrowdown"></span></th>
                   <th class="last"></th>
@@ -439,7 +439,7 @@
               </thead>
               <tbody id="recentMatchesLiveList">
                 <tr id="recentMatchesTemplate">
-                  <td data-tmpl="age" data-tooltip=" "></td>
+                  <td data-tmpl="age"></td>
                   <td data-tmpl="rate"></td>
                   <td data-tmpl="qty"></td>
                 </tr>
