--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -544,3 +544,19 @@
   </div>
 </div>
 {{end}}
+
+{{define "toggleWalletStatusConfirm"}}
+<div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+<div class="px-2 py-1 text-center position-relative fs22 sans-light">
+   <span id="walletStatusDisable" class="d-hide">[[[disable_wallet]]]</span>
+    <span id="walletStatusEnable" class="d-hide">[[[enable_wallet]]]</span>
+</div>
+<div class="fs15 text-left mt-2">
+ <span id="disableWalletMsg" class="hide">[[[disable_wallet_warning]]]</span>
+ <span id="enableWalletMsg" class="hide">[[[enable_wallet_message]]]</span>
+</div>
+<div class="d-flex justify-content-end mt-4">
+  <button id="toggleWalletStatusSubmit" type="button" class="justify-content-center fs15 bg2 selected">[[[Submit]]]</button>
+</div>
+<div class="fs15 pt-3 text-center d-hide errcolor" id="toggleWalletStatusErr"></div>
+{{end}}
